--- a/popup.css
+++ b/popup.css
@@ -24,9 +24,6 @@ overflow: hidden;
 max-width: 400px;
 }
 
-#add-icon{
-	background-image:url('chrome-extension://images/add.png');
-}
 
 .listing{
 	margin-left:10px;
@@ -38,6 +35,7 @@ max-width: 400px;
 	height: 20px;
     text-align: -webkit-center;
 
+
     background-color: #ffffff;
 }
 
@@ -46,6 +44,7 @@ max-width: 400px;
     margin-bottom: 10px !important;
     margin-right: 10px;
     border-radius: 30px !important;
+    background-color: #4a3ac2
 }
 
 .btn-success{
@@ -77,4 +76,8 @@ max-width: 400px;
 .glyphicon{
 	height:20px;
 	width:20px;
+}
+
+.remove-listing{
+	color:red;
 }
